--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="widuth=device-widht, initial-sclae=1.0" />
-    <title>Document</title>
+    <title>BMI Calculator</title>
   </head>
 
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="box">
+        <h1>BMI Calculator</h1>
+        <div class="content">
+          <div class="input">
+            <label for="height">Tinggi Badan(kg)</label>
+            <input type="number" id="height" />
+          </div>
+          <div class="input">
+            <label for="weight">Berat Badan(kg)</label>
+            <input type="number" id="weight" />
+          </div>
+          <button id="calculate">Hitung BMI</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
